--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,1 +1,34 @@
+# .github/workflows/python-app.yml
 
+name: Flask App CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: 🔄 Repositoriyni klon qilish
+      uses: actions/checkout@v3
+
+    - name: 🐍 Python o‘rnatish
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: 📦 Kutubxonalarni o‘rnatish
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: ✅ Flask ilovasini test qilish
+      run: |
+        python app.py &
+        sleep 5
+        curl -f http://127.0.0.1:5000 || exit 1
