--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
+babel==2.17.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+docxcompose==1.4.0
+docxtpl==0.19.1
+et_xmlfile==2.0.0
+Flask==3.1.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+lxml==5.3.1
+MarkupSafe==3.0.2
+numpy==2.3.0
+openpyxl==3.1.5
+pillow==11.1.0
+python-docx==1.1.2
+python-pptx==1.0.2
+requests==2.32.3
+setuptools==75.8.2
+six==1.17.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+XlsxWriter==3.2.2
 
